add dep for exporting prometheus metrics, add endpoint for getting prom metrics with api annotations
