# golang-gin-pgx/docs/swagger.json
@@ -130,6 +130,26 @@
                 }
             }
         },
+        "/metrics": {
+            "get": {
+                "description": "Returns Prometheus metrics.",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "metrics"
+                ],
+                "summary": "Metrics",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/status": {
             "get": {
                 "description": "Returns `\"ok\"` if the server is up.",
